force-app/main/default/objects/custom_create377__c/custom_create377__c.object-meta.xml
<CustomObject>
    <label>Custom created object377</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects377</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>