force-app/main/default/objects/custom_create377__c/fields/custom_create_377field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_377field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 377field526</label>
    <type>Checkbox</type>
</CustomField>